TrabFinal/provol-One.output
Terminals unused in grammar

    SE
    ENTAO
    SENAO


Grammar

    0 $accept: program $end

    1 program: ENTRADA varlist SAIDA varlist cmds FIM

    2 varlist: varlist ID
    3        | ID

    4 cmds: cmds cmd
    5     | cmd

    6 cmd: ENQUANTO ID FACA cmds FIM
    7    | ID IGUAL ID
    8    | INC ABREPAR ID FECHAPAR
    9    | ZERA ABREPAR ID FECHAPAR


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    ENTRADA (258) 1
    SAIDA (259) 1
    FIM (260) 1 6
    FACA (261) 6
    ENQUANTO (262) 6
    SE (263)
    ENTAO (264)
    SENAO (265)
    INC (266) 8
    ZERA (267) 9
    IGUAL (268) 7
    ABREPAR (269) 8 9
    FECHAPAR (270) 8 9
    ID <name> (271) 2 3 6 7 8 9


Nonterminals, with rules where they appear

    $accept (17)
        on left: 0
    program <number> (18)
        on left: 1
        on right: 0
    varlist <content> (19)
        on left: 2 3
        on right: 1 2
    cmds <content> (20)
        on left: 4 5
        on right: 1 4 6
    cmd <content> (21)
        on left: 6 7 8 9
        on right: 4 5


State 0

    0 $accept: . program $end

    ENTRADA  shift, and go to state 1

    program  go to state 2


State 1

    1 program: ENTRADA . varlist SAIDA varlist cmds FIM

    ID  shift, and go to state 3

    varlist  go to state 4


State 2

    0 $accept: program . $end

    $end  shift, and go to state 5


State 3

    3 varlist: ID .

    $default  reduce using rule 3 (varlist)


State 4

    1 program: ENTRADA varlist . SAIDA varlist cmds FIM
    2 varlist: varlist . ID

    SAIDA  shift, and go to state 6
    ID     shift, and go to state 7


State 5

    0 $accept: program $end .

    $default  accept


State 6

    1 program: ENTRADA varlist SAIDA . varlist cmds FIM

    ID  shift, and go to state 3

    varlist  go to state 8


State 7

    2 varlist: varlist ID .

    $default  reduce using rule 2 (varlist)


State 8

    1 program: ENTRADA varlist SAIDA varlist . cmds FIM
    2 varlist: varlist . ID

    ENQUANTO  shift, and go to state 9
    INC       shift, and go to state 10
    ZERA      shift, and go to state 11
    ID        shift, and go to state 12

    cmds  go to state 13
    cmd   go to state 14


State 9

    6 cmd: ENQUANTO . ID FACA cmds FIM

    ID  shift, and go to state 15


State 10

    8 cmd: INC . ABREPAR ID FECHAPAR

    ABREPAR  shift, and go to state 16


State 11

    9 cmd: ZERA . ABREPAR ID FECHAPAR

    ABREPAR  shift, and go to state 17


State 12

    2 varlist: varlist ID .
    7 cmd: ID . IGUAL ID

    IGUAL  shift, and go to state 18

    $default  reduce using rule 2 (varlist)


State 13

    1 program: ENTRADA varlist SAIDA varlist cmds . FIM
    4 cmds: cmds . cmd

    FIM       shift, and go to state 19
    ENQUANTO  shift, and go to state 9
    INC       shift, and go to state 10
    ZERA      shift, and go to state 11
    ID        shift, and go to state 20

    cmd  go to state 21


State 14

    5 cmds: cmd .

    $default  reduce using rule 5 (cmds)


State 15

    6 cmd: ENQUANTO ID . FACA cmds FIM

    FACA  shift, and go to state 22


State 16

    8 cmd: INC ABREPAR . ID FECHAPAR

    ID  shift, and go to state 23


State 17

    9 cmd: ZERA ABREPAR . ID FECHAPAR

    ID  shift, and go to state 24


State 18

    7 cmd: ID IGUAL . ID

    ID  shift, and go to state 25


State 19

    1 program: ENTRADA varlist SAIDA varlist cmds FIM .

    $default  reduce using rule 1 (program)


State 20

    7 cmd: ID . IGUAL ID

    IGUAL  shift, and go to state 18


State 21

    4 cmds: cmds cmd .

    $default  reduce using rule 4 (cmds)


State 22

    6 cmd: ENQUANTO ID FACA . cmds FIM

    ENQUANTO  shift, and go to state 9
    INC       shift, and go to state 10
    ZERA      shift, and go to state 11
    ID        shift, and go to state 20

    cmds  go to state 26
    cmd   go to state 14


State 23

    8 cmd: INC ABREPAR ID . FECHAPAR

    FECHAPAR  shift, and go to state 27


State 24

    9 cmd: ZERA ABREPAR ID . FECHAPAR

    FECHAPAR  shift, and go to state 28


State 25

    7 cmd: ID IGUAL ID .

    $default  reduce using rule 7 (cmd)


State 26

    4 cmds: cmds . cmd
    6 cmd: ENQUANTO ID FACA cmds . FIM

    FIM       shift, and go to state 29
    ENQUANTO  shift, and go to state 9
    INC       shift, and go to state 10
    ZERA      shift, and go to state 11
    ID        shift, and go to state 20

    cmd  go to state 21


State 27

    8 cmd: INC ABREPAR ID FECHAPAR .

    $default  reduce using rule 8 (cmd)


State 28

    9 cmd: ZERA ABREPAR ID FECHAPAR .

    $default  reduce using rule 9 (cmd)


State 29

    6 cmd: ENQUANTO ID FACA cmds FIM .

    $default  reduce using rule 6 (cmd)
